--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "react": "^16.8.4",
+    "react-cookie": "^3.1.1",
+    "react-cookies": "^0.1.0",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8"
