--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-cookies": "^0.1.0",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "reactstrap": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
