--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "react": "^16.8.4",
+    "react-bootstrap-table": "^4.3.1",
     "react-cookie": "^3.1.1",
     "react-cookies": "^0.1.0",
     "react-dom": "^16.8.4",
