--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
     "bootstrap": "^4.3.1",
     "react": "^16.8.4",
     "react-cookie": "^3.1.1",
