--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy==1.14.3
-Flask_Cors==3.0.4
-Flask==1.0.2
-mysql_connector_repackaged==0.3.1
+numpy==1.15.4
+flask_cors==3.0.7
+flask==1.0.2
+mysql-connector==2.1.6
